# WorkloadPlus1

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 20260322_000001_0_0_4_to_0_0_5.py  20260326_000002_claimed_to_claim_id.py  20260326_000003_drop_legacy_hour_columns.py
app/: cli.py  config.py  database.py  main.py  models.py  seed_data.py  sms_auth_api.py
app/core/: __init__.py  config.py  database.py
app/models/: __init__.py  department.py  project.py  settlement.py  user.py  work_record.py
app/routers/: __init__.py  admin.py  auth.py  dashboard.py  deps.py  record.py
app/services/: __init__.py  activity_heatmap.py  excel_exporter.py
app/static/: style.css
app/templates/: base.html  login.html  login.jinja2  no_department.jinja2  profile.html  record.html  record.jinja2  timeline.html  timeline.jinja2
app/templates/admin/: claim_form.html  claim_form.jinja2  department.html  department.jinja2  export.html  members.html  no_permission.html  no_permission.jinja2  records.html  records.jinja2  settlement.html  settlement.jinja2  settlement_claims.html  settlement_claims.jinja2  stats.html  stats.jinja2
app/utils/: __init__.py  excel_exporter.py  seed_data.py  uniform_login_des.py
